--- a/assignment_01/Assignment_01.ipynb
+++ b/assignment_01/Assignment_01.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Assignment_01.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOWiwtPjIXUpaAbqzt4jK6w",
+      "authorship_tag": "ABX9TyN9X5KfXHWZtlG9FaDiy5RF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,7 +59,7 @@
       "source": [
         "print (\"hello wolrd\")\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -93,7 +93,7 @@
         "x = 10 * 2\n",
         "print(x)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -127,13 +127,45 @@
         "z = y/x\n",
         "print(z)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "5.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KLItA7CYSeUP"
+      },
+      "source": [
+        "## 4. addition"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "X2lu96BxShd8",
+        "outputId": "405c62a0-1d64-4c1c-85e0-ad0172388a76",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(200+100)"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "300\n"
           ]
         }
       ]
