--- a/assignment_02/in_session_practices_02.ipynb
+++ b/assignment_02/in_session_practices_02.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "in_session-practices_02.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM4noZ2PGm+tf52nGOlN59v",
+      "authorship_tag": "ABX9TyN7918YtOWmQvVqLCzFrJ+S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,7 +62,7 @@
         "s = \"Hello\"    # string, a collection of characters\n",
         "print(x, y, s)\n"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -85,7 +85,7 @@
       "source": [
         "type(x)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -111,7 +111,7 @@
       "source": [
         "type(s)\n"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -148,7 +148,7 @@
         "a_list = [1, 4, 7, 10] \n",
         "print(a_list)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -171,7 +171,7 @@
       "source": [
         "type(a_list)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -207,7 +207,7 @@
         "for i in a_list:\n",
         "    print(\"interger\", i)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -242,7 +242,7 @@
       "source": [
         "print(10 % 2) #modula"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -265,7 +265,7 @@
       "source": [
         "print(23%2) #modula"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -290,7 +290,7 @@
         "    if i % 2 == 1:\n",
         "        print(\"Odd number\", i)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -298,6 +298,448 @@
           "text": [
             "Odd number 1\n",
             "Odd number 7\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "T-Plb7CHK6lE"
+      },
+      "source": [
+        "## python build-in functions\n",
+        "- range\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4fdLEN52LCYH",
+        "outputId": "f73505bc-6b6d-4425-ac72-878bdead9bac",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "for i in range(10,21,2):\n",
+        "  print(i)"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "12\n",
+            "14\n",
+            "16\n",
+            "18\n",
+            "20\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cYCe_WmIMEkF",
+        "outputId": "7fff0283-481f-4a0b-a1f8-309a288550f6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "for j in range(0,5):\n",
+        "  print(j)"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "P67J4RcsMjmr",
+        "outputId": "d1889b7f-9895-4775-fb86-fc764fdfac7d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 129
+        }
+      },
+      "source": [
+        "print(list range(0,5))"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-a063caadac04>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    print(list range(0,5))\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TprwUO_dNC0s",
+        "outputId": "4a59cb38-ac47-4c54-9723-bd9346cf1656",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "x = \"50\"\n",
+        "type(x)"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SOSGDOL8NNhL",
+        "outputId": "12387757-849a-44d2-c9da-cb49e93456ce",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "y = int(x)\n",
+        "type(y)"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9ddZ1udcNZju",
+        "outputId": "1a850a88-fab8-4536-a7a4-fc98f8942e85",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(x,y)"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "50 50\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pP-NRm_4Njvc"
+      },
+      "source": [
+        "## 6.Accepting user inputs"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Fz42OJoJNxKy",
+        "outputId": "e632eafc-0468-494a-fa50-eaaec88856fb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "x = input(\"enter an integer:\")"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "enter an integer:10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MCNCA2QNN_9S",
+        "outputId": "573470e5-6866-485d-ec01-6438a8f43b1b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(x)"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sIkRLPOMODPH",
+        "outputId": "d6fbcae7-2762-4658-c129-1fd92bc8bb1d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "type(x)"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NF1rs6sKOIdd",
+        "outputId": "df2439e0-0549-4e73-fdff-2ac4c7503b68",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "x = input(\"enter an integer:\")\n"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "enter an integer:rakesh\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Za8MBOD8OOTy",
+        "outputId": "7c75cec0-2f74-484a-8d42-e5c69e78664b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(x)"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "rakesh\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CLqdgYu4OTjb"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "h0iT7bS7OZVC"
+      },
+      "source": [
+        "## 7. Exception handling"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RgfxtqW6Ohvo",
+        "outputId": "cca9a990-35b8-4446-bfa0-456f4089b8b1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 180
+        }
+      },
+      "source": [
+        "y = int(x)\n",
+        "print(y)"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-27-049714fa7447>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'rakesh'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zl6by0xuOvv1",
+        "outputId": "727a7cad-eb05-4055-a678-aa2227c9049b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "y = int(\"50\")\n",
+        "print(y)"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "50\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DKguvWUnO1GG",
+        "outputId": "0b93484e-d6f6-488e-de6a-776eba01a57a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 129
+        }
+      },
+      "source": [
+        "x = input(\"please enter an integer:\" )\n",
+        "try:\n",
+        "y = int(x)\n",
+        "print(\"got integer:\",y)\n",
+        "except:\n",
+        "print(\"unable to convert the user input to integer\")\n"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "IndentationError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-32-b45d6ab32853>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    y=int(x)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uVRcUwMEP2oP"
+      },
+      "source": [
+        "## infinite loop"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EkoXW550P6we",
+        "outputId": "a0aa5823-7a57-400b-aaec-740a8e5c242a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 129
+        }
+      },
+      "source": [
+        "while True:\n",
+        "  x = input(\"please enter an integer:\" )\n",
+        "  try:\n",
+        "    y = int(x)\n",
+        "print(\"got integer:\",y)\n",
+        "break\n",
+        "except:\n",
+        "  print(\"unable to convert\")\n"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "IndentationError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-33-02ceab067ec2>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    print(\"got integer:\",y)\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected unindent\n"
           ]
         }
       ]
