--- a/assignment_02/in_session_practices_02.ipynb
+++ b/assignment_02/in_session_practices_02.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "in_session-practices_02.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN7918YtOWmQvVqLCzFrJ+S",
+      "authorship_tag": "ABX9TyN/tNXYU0DVtME8LplX//as",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -317,11 +317,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4fdLEN52LCYH",
-        "outputId": "f73505bc-6b6d-4425-ac72-878bdead9bac",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4fdLEN52LCYH",
+        "outputId": "f73505bc-6b6d-4425-ac72-878bdead9bac"
       },
       "source": [
         "for i in range(10,21,2):\n",
@@ -346,11 +346,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cYCe_WmIMEkF",
-        "outputId": "7fff0283-481f-4a0b-a1f8-309a288550f6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "cYCe_WmIMEkF",
+        "outputId": "7fff0283-481f-4a0b-a1f8-309a288550f6"
       },
       "source": [
         "for j in range(0,5):\n",
@@ -374,12 +374,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "P67J4RcsMjmr",
-        "outputId": "d1889b7f-9895-4775-fb86-fc764fdfac7d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 129
-        }
+        },
+        "id": "P67J4RcsMjmr",
+        "outputId": "d1889b7f-9895-4775-fb86-fc764fdfac7d"
       },
       "source": [
         "print(list range(0,5))"
@@ -399,11 +399,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TprwUO_dNC0s",
-        "outputId": "4a59cb38-ac47-4c54-9723-bd9346cf1656",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "TprwUO_dNC0s",
+        "outputId": "4a59cb38-ac47-4c54-9723-bd9346cf1656"
       },
       "source": [
         "x = \"50\"\n",
@@ -426,11 +426,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SOSGDOL8NNhL",
-        "outputId": "12387757-849a-44d2-c9da-cb49e93456ce",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SOSGDOL8NNhL",
+        "outputId": "12387757-849a-44d2-c9da-cb49e93456ce"
       },
       "source": [
         "y = int(x)\n",
@@ -453,11 +453,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9ddZ1udcNZju",
-        "outputId": "1a850a88-fab8-4536-a7a4-fc98f8942e85",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9ddZ1udcNZju",
+        "outputId": "1a850a88-fab8-4536-a7a4-fc98f8942e85"
       },
       "source": [
         "print(x,y)"
@@ -485,11 +485,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Fz42OJoJNxKy",
-        "outputId": "e632eafc-0468-494a-fa50-eaaec88856fb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Fz42OJoJNxKy",
+        "outputId": "e632eafc-0468-494a-fa50-eaaec88856fb"
       },
       "source": [
         "x = input(\"enter an integer:\")"
@@ -508,11 +508,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MCNCA2QNN_9S",
-        "outputId": "573470e5-6866-485d-ec01-6438a8f43b1b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "MCNCA2QNN_9S",
+        "outputId": "573470e5-6866-485d-ec01-6438a8f43b1b"
       },
       "source": [
         "print(x)"
@@ -531,11 +531,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sIkRLPOMODPH",
-        "outputId": "d6fbcae7-2762-4658-c129-1fd92bc8bb1d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sIkRLPOMODPH",
+        "outputId": "d6fbcae7-2762-4658-c129-1fd92bc8bb1d"
       },
       "source": [
         "type(x)"
@@ -557,11 +557,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NF1rs6sKOIdd",
-        "outputId": "df2439e0-0549-4e73-fdff-2ac4c7503b68",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NF1rs6sKOIdd",
+        "outputId": "df2439e0-0549-4e73-fdff-2ac4c7503b68"
       },
       "source": [
         "x = input(\"enter an integer:\")\n"
@@ -580,11 +580,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Za8MBOD8OOTy",
-        "outputId": "7c75cec0-2f74-484a-8d42-e5c69e78664b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Za8MBOD8OOTy",
+        "outputId": "7c75cec0-2f74-484a-8d42-e5c69e78664b"
       },
       "source": [
         "print(x)"
@@ -623,12 +623,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RgfxtqW6Ohvo",
-        "outputId": "cca9a990-35b8-4446-bfa0-456f4089b8b1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 180
-        }
+        },
+        "id": "RgfxtqW6Ohvo",
+        "outputId": "cca9a990-35b8-4446-bfa0-456f4089b8b1"
       },
       "source": [
         "y = int(x)\n",
@@ -652,11 +652,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zl6by0xuOvv1",
-        "outputId": "727a7cad-eb05-4055-a678-aa2227c9049b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zl6by0xuOvv1",
+        "outputId": "727a7cad-eb05-4055-a678-aa2227c9049b"
       },
       "source": [
         "y = int(\"50\")\n",
@@ -676,32 +676,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DKguvWUnO1GG",
-        "outputId": "0b93484e-d6f6-488e-de6a-776eba01a57a",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 129
-        }
+        "id": "DKguvWUnO1GG"
       },
       "source": [
-        "x = input(\"please enter an integer:\" )\n",
+        "x = input(\"Please enter an integer:\")\n",
         "try:\n",
-        "y = int(x)\n",
-        "print(\"got integer:\",y)\n",
+        "    y = int(x)\n",
+        "    print(\"got integer:\", y)\n",
         "except:\n",
-        "print(\"unable to convert the user input to integer\")\n"
+        "    print(\"Unable to convert the user input to an integer\")\n"
       ],
-      "execution_count": 32,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "IndentationError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-32-b45d6ab32853>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    y=int(x)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -715,12 +701,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EkoXW550P6we",
-        "outputId": "a0aa5823-7a57-400b-aaec-740a8e5c242a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 129
-        }
+        },
+        "id": "EkoXW550P6we",
+        "outputId": "a0aa5823-7a57-400b-aaec-740a8e5c242a"
       },
       "source": [
         "while True:\n",
@@ -743,6 +729,71 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9ZhlpjMbXa0y"
+      },
+      "source": [
+        "the_list = []\n",
+        "\n",
+        "for i in range(0,3):\n",
+        "    while True:\n",
+        "        x = input(\"Please enter an integer:\")\n",
+        "        try:\n",
+        "            y = int(x)\n",
+        "            the_list.append(y)\n",
+        "            print(\"got integer:\", y)\n",
+        "            break\n",
+        "        except:\n",
+        "            print(\"You must enter an integer. Please try again.\")\n",
+        "\n",
+        "\n",
+        "print(\"You have entered:\", the_list)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a_dbl04mXvBE"
+      },
+      "source": [
+        "total = 0\n",
+        "\n",
+        "for i in the_list:\n",
+        "    total += i    # total = total + i\n",
+        "\n",
+        "print(\"total = \", total)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WEYXtCXPXvxL"
+      },
+      "source": [
+        "\n",
+        "mean = total / len(the_list)\n",
+        "print(mean)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tqAyh6KzXyaD"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
