--- a/assignment_02/in_session_practices_02.ipynb
+++ b/assignment_02/in_session_practices_02.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "in_session-practices_02.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN/tNXYU0DVtME8LplX//as",
+      "authorship_tag": "ABX9TyO1OadInchcKdsGokDzRU8X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
         "id": "rtTugaxo_u8F"
       },
       "source": [
-        "1. Simple Types"
+        "## 1. Simple Types"
       ]
     },
     {
@@ -227,7 +227,7 @@
         "id": "3xMZ1X05BknF"
       },
       "source": [
-        "4. conditions"
+        "## 4. conditions"
       ]
     },
     {
@@ -303,16 +303,18 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "T-Plb7CHK6lE"
+        "id": "8z4H6MN0rLoo"
       },
       "source": [
-        "## python build-in functions\n",
-        "- range\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "## 5. Python build-in functions\n",
+        "- range()\n",
+        "- list()\n",
+        "- int()\n",
+        "- str()\n",
+        "- len() the num of items in a collection"
+      ]
     },
     {
       "cell_type": "code",
@@ -375,23 +377,21 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 129
+          "base_uri": "https://localhost:8080/"
         },
-        "id": "P67J4RcsMjmr",
-        "outputId": "d1889b7f-9895-4775-fb86-fc764fdfac7d"
+        "id": "n7tYZSjyMRXf",
+        "outputId": "dead8c1d-8300-4f98-a5ca-29808fc98b2d"
       },
       "source": [
-        "print(list range(0,5))"
+        "print(list(range(0,5)))"
       ],
-      "execution_count": 17,
+      "execution_count": 39,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-a063caadac04>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    print(list range(0,5))\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0, 1, 2, 3, 4]\n"
           ]
         }
       ]
@@ -624,45 +624,16 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 180
-        },
-        "id": "RgfxtqW6Ohvo",
-        "outputId": "cca9a990-35b8-4446-bfa0-456f4089b8b1"
-      },
-      "source": [
-        "y = int(x)\n",
-        "print(y)"
-      ],
-      "execution_count": 27,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-27-049714fa7447>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'rakesh'"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "zl6by0xuOvv1",
-        "outputId": "727a7cad-eb05-4055-a678-aa2227c9049b"
+        "outputId": "6f8f0267-cb30-4161-b709-2b4903c9fefe"
       },
       "source": [
         "y = int(\"50\")\n",
         "print(y)"
       ],
-      "execution_count": 28,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
@@ -676,7 +647,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DKguvWUnO1GG"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DKguvWUnO1GG",
+        "outputId": "f50d4005-4af0-47c3-9702-f5325bb7615c"
       },
       "source": [
         "x = input(\"Please enter an integer:\")\n",
@@ -686,8 +661,17 @@
         "except:\n",
         "    print(\"Unable to convert the user input to an integer\")\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Please enter an integer:12\n",
+            "got integer: 12\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -702,30 +686,29 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 129
+          "base_uri": "https://localhost:8080/"
         },
         "id": "EkoXW550P6we",
-        "outputId": "a0aa5823-7a57-400b-aaec-740a8e5c242a"
+        "outputId": "a29b181e-dbff-4257-f61a-cf54395aa4d3"
       },
       "source": [
         "while True:\n",
-        "  x = input(\"please enter an integer:\" )\n",
-        "  try:\n",
-        "    y = int(x)\n",
-        "print(\"got integer:\",y)\n",
-        "break\n",
-        "except:\n",
-        "  print(\"unable to convert\")\n"
+        "    x = input(\"Please enter an integer:\")\n",
+        "    try:\n",
+        "        y = int(x)\n",
+        "        print(\"got integer:\", y)\n",
+        "        break\n",
+        "    except:\n",
+        "        print(\"You must enter an integer. Please try again.\")"
       ],
-      "execution_count": 33,
+      "execution_count": 44,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "IndentationError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-33-02ceab067ec2>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    print(\"got integer:\",y)\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected unindent\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Please enter an integer:14\n",
+            "got integer: 14\n"
           ]
         }
       ]
@@ -733,7 +716,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9ZhlpjMbXa0y"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9ZhlpjMbXa0y",
+        "outputId": "dcaac9d8-ea90-459e-dd15-385cc55c0725"
       },
       "source": [
         "the_list = []\n",
@@ -752,13 +739,31 @@
         "\n",
         "print(\"You have entered:\", the_list)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Please enter an integer:23\n",
+            "got integer: 23\n",
+            "Please enter an integer:43\n",
+            "got integer: 43\n",
+            "Please enter an integer:43\n",
+            "got integer: 43\n",
+            "You have entered: [23, 43, 43]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "a_dbl04mXvBE"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "a_dbl04mXvBE",
+        "outputId": "1f528f8e-04fc-4175-d199-92fdeeedd1fd"
       },
       "source": [
         "total = 0\n",
@@ -768,21 +773,41 @@
         "\n",
         "print(\"total = \", total)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "total =  109\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WEYXtCXPXvxL"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WEYXtCXPXvxL",
+        "outputId": "9505985f-c87d-4458-c176-62095d883da9"
       },
       "source": [
         "\n",
         "mean = total / len(the_list)\n",
         "print(mean)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "36.333333333333336\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
