--- a/assignment_02/Assignment_02.ipynb
+++ b/assignment_02/Assignment_02.ipynb
@@ -297,13 +297,13 @@
       },
       "source": [
         "for i in range(len(x)):  \n",
-        "  x[i] = x[i] - mean               #difference between each value in the list and the mean value \n",
+        "  x[i] = x[i] - mean               
         "for i in x:  \n",
-        "  z = i**2                         #square of each difference\n",
+        "  z = i**2                        
         "sum = 0  \n",
         "for i in x:  \n",
-        "  sum+=i*i;                        #sum of squares\n",
-        "variance = sum/len(x)              #average of squares\n",
+        "  sum+=i*i;                        
+        "variance = sum/len(x)              
         "print(\"variance is:\", variance)"
       ],
       "execution_count": 80,
