--- a/assignment_02/Assignment_02.ipynb
+++ b/assignment_02/Assignment_02.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Assignment_02.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN5bnqPnJ+C5ako1hahWBG/",
+      "authorship_tag": "ABX9TyMJt+aAZ9bMXypkdhQo/Zbv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -297,13 +297,13 @@
       },
       "source": [
         "for i in range(len(x)):  \n",
-        "  x[i] = x[i] - mean               
+        "  x[i] = x[i] - mean               \n",
         "for i in x:  \n",
-        "  z = i**2                        
+        "  z = i**2                         \n",
         "sum = 0  \n",
         "for i in x:  \n",
-        "  sum+=i*i;                        
-        "variance = sum/len(x)              
+        "  sum+=i*i;                      \n",
+        "variance = sum/len(x)              \n",
         "print(\"variance is:\", variance)"
       ],
       "execution_count": 80,
