--- a/Individual Project final/Individual_Project_Part_B.ipynb
+++ b/Individual Project final/Individual_Project_Part_B.ipynb
@@ -2533,7 +2533,7 @@
         "id": "W0r7y2R2-8fO"
       },
       "source": [
-        "# GDP per capita, PPP (current international $)"
+        "# GDP per capita, PPP (current international)"
       ]
     },
     {
