--- a/Assignment_10/Assignment-10.ipynb
+++ b/Assignment_10/Assignment-10.ipynb
@@ -1,6 +1,38 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data 690-Fall With Dr.Wang:\n",
+    "\n",
+    "Rakesh\n",
+    "Date: 11/07/2021.\n",
+    "Assignment 10:\n",
+    "\n",
+    "Watch, Learn, and Practice\n",
+    "Watch the following video on Youtube (about 1 hour 30 minutes long):\n",
+    "\n",
+    "https://www.youtube.com/watch?v=iYie42M1ZyU\n",
+    "\n",
+    "This video discusses the concept of tidy data and how to use Pandas to make data tidy.\n",
+    "\n",
+    "This is a great refresher for Pandas data analysis. You will also learn new things that we have not covered in our class.\n",
+    "\n",
+    "The data files and notebooks used in the video are hosted in GitHub:\n",
+    "\n",
+    "https://github.com/chendaniely/pydatadc_2018-tidy\n",
+    "\n",
+    "Instructions:\n",
+    "You must download data files from GitHub prior to playing the video.\n",
+    "You must create/write/run your own notebook as you follow along with the speaker.\n",
+    "You may download the notebooks from the above GitHub repo and copy/paste cells into yours to save typing time\n",
+    "You will pause and work on your notebook and continue as you ride along.\n",
+    "After you are done, create a markdown cell at the end of your notebook and write a list of new things you learned from this video.\n",
+    "You will upload your Jupyter notebook file to GitHub and submit the link in BlackBoard."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
